<resources>
    <string name="google_maps_api_key_release" translatable="false">AIzaSyBfVYDP-PuOO2pov8QaZAENaDT4rOLdPx4</string>
    <string name="app_name" translatable="false">Sender</string>
    <string name="provider_str" translatable="false">mobi.sender.fileprovider</string>
    <string name="tlb_reg">Sign in</string>
    <string name="tlb_phone_confirm">Phone confirmation</string>
    <string name="tlb_keys_sync">Keys synchronization</string>
    <string name="tlb_data_sync">Data synchronization</string>
    <string name="tlb_settings">Settings</string>
    <string name="tlb_qr_code">Qr-code</string>
    <string name="tlb_members">" members"</string>
    <string name="tlb_caption">Location</string>
    <string name="tlb_registration">Registration</string>
    <string name="tlb_confirmation">Confirmation</string>
    <string name="tlb_password_encryption">Password encryption</string>
    <string name="tlb_new_group_chat">New group chat</string>
    <string name="tlb_new_forward_mess">Forward message</string>
    <string name="reg_click_agree">When you press \"Continue\" button, you confirm that you has read and agree
        <a href="#">and user agreement</a>
    </string>
    <string name="reg_wait_confirm">Sender waiting of confirmation on your another device:</string>
    <string name="reg_sender_now_calling_to_you">Sender now calling to you…</string>
    <string name="reg_phone_number">Phone number</string>
    <string name="prf_tell_friends">Tell friends</string>
    <string name="prf_wallet">Wallet</string>
    <string name="prf_shop">Shop</string>
    <string name="prf_add_company">Create robot</string>
    <string name="prf_install_this_app">"Install this app "</string>
    <string name="ntf_new_messages_in_gcm">New messages in</string>
    <string name="ntf_chats_gcm">chats</string>
    <string name="ntf_you_removed_from_chat">"You have been removed from the chat: "</string>
    <string name="btc_export">Export wallet</string>
    <string name="btc_import">Import wallet</string>
    <string name="btc_new">Create new wallet</string>
    <string name="btc_change_pass">Change password</string>
    <string name="btc_export_instr">Open your wallet application on another device and scan this QR to import wallet
        private key in bip39 format
    </string>
    <string name="btc_export_instr2">… or use this mnemonic code:</string>
    <string name="btc_setup_pass">Setup new password</string>
    <string name="btc_pass_hint1">Enter new password</string>
    <string name="btc_pass_hint2">Re-type new password</string>
    <string name="stg_enter_new_user_name">Enter new user name</string>
    <string name="stg_enter_new_status">Enter new status</string>
    <string name="stg_new_user_name_error_msg">Enter new user name!</string>
    <string name="stg_new_status_error_msg">Enter new user status!</string>
    <string name="stg_are_you_sure_logout">Are you sure to logout from Sender on this device?</string>
    <string name="stg_are_you_sure_disable_other">Are you sure to logout from Sender on other devices?</string>
    <string name="stg_are_you_sure_clear_cashe">Are you sure to remove all downloaded files?</string>
    <string name="stg_are_you_sure_reset">Are you sure to reset all settings to defaults?</string>
    <string name="stg_are_you_sure_clear_history">Are you sure clear history?</string>
    <string name="stg_profile">Profile</string>
    <string name="stg_photo">Photo</string>
    <string name="stg_name">Name</string>
    <string name="stg_user_name">User Name</string>
    <string name="stg_status">Status</string>
    <string name="stg_general">General</string>
    <string name="stg_send_status_read">Send status read</string>
    <string name="stg_language">Language</string>
    <string name="stg_notifications">Notifications</string>
    <string name="stg_sound">Sound</string>
    <string name="stg_cleanup">Cleanup</string>
    <string name="stg_disable_this_device">Disable this device</string>
    <string name="stg_disable_other_devices">Disable other devices</string>
    <string name="stg_clear_media_files">Clear media files</string>
    <string name="stg_clear_history">Clear history</string>
    <string name="stg_reset_settings">Reset settings</string>
    <string name="stg_disable_gps">Send GPS data</string>
    <string name="map_determinate_location">Try to determine location. Wait please</string>
    <string name="map_disable_location_name">Can\'t get name of location</string>
    <string name="cht_sendbar_transfer">Transfer</string>
    <string name="cht_sendbar_recharge">Recharge</string>
    <string name="cht_camera">Camera</string>
    <string name="cht_gallery">Gallery</string>
    <string name="cht_file">File</string>
    <string name="cht_contact">Contact</string>
    <string name="cht_location">Location</string>
    <string name="cht_press_to_record">Hold record button and speak.</string>
    <string name="cht_press_to_listen">Press play button to listen.</string>
    <string name="cht_your_message">Your message</string>
    <string name="cht_new_messages">New messages</string>
    <string name="cht_file_too_large">File is to large. Maximum file size is 100 Mb.</string>
    <string name="chi_favorite">Favorite</string>
    <string name="chi_block">Block</string>
    <string name="chi_encrypt">Encrypt</string>
    <string name="chi_mute">Turn off notifications</string>
    <string name="chi_palette">Chat background</string>
    <string name="chi_leave_chat">Leave chat</string>
    <string name="chi_add_people">Add participant</string>
    <string name="chi_company_card">The card of company</string>
    <string name="chi_phone">Phone</string>
    <string name="act_done" translatable="false">Done</string>
    <string name="act_call" translatable="false">Call</string>
    <string name="act_info" translatable="false">Info</string>
    <string name="act_chat" translatable="false">Chat</string>
    <string name="btn_create_new">Create new</string>
    <string name="btn_repeat_password">Repeat password</string>
    <string name="btn_scan">Scan</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_add">Add</string>
    <string name="btn_i_didn_t_receive_sms">I didn\'t receive SMS</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_ok">OK</string>
    <string name="btn_go_to_chat">Go to chat</string>
    <string name="btn_unblock">Unblock</string>
    <string name="btn_close">Close</string>
    <string name="btn_go">Go</string>
    <string name="msg_im_here">I\'m here</string>
    <string name="msg_today">Today</string>
    <string name="msg_yesterday">Yesterday</string>
    <string name="msg_two_days">2 days ago</string>
    <string name="msg_three_and_four_days">%d days ago</string>
    <string name="msg_other_days">%d days ago</string>
    <string name="msg_not_sent">Not sent</string>
    <string name="msg_sent">Sent</string>
    <string name="msg_delivered">Delivered</string>
    <string name="msg_viewed">Viewed</string>
    <string name="msg_mess_deleted">Message deleted</string>
    <string name="msg_typing">" typing…"</string>
    <string name="msg_my_status">My status</string>
    <string name="msg_deleted">"deleted "</string>
    <string name="msg_from_chat">" from chat"</string>
    <string name="msg_added">"added "</string>
    <string name="msg_to_chat">" to chat"</string>
    <string name="msg_leave_chat">leave from chat</string>
    <string name="msg_form">Form</string>
    <string name="msg_encr">" enabled chat encryption"</string>
    <string name="msg_i">I</string>
    <string name="msg_encr_mess">Encrypted message</string>
    <string name="msg_no_user">User with this number doesn\'t exist</string>
    <string name="msg_you_join_the_chat">You have joined the chat</string>
    <string name="msg_you">"You "</string>
    <string name="msg_you_2">"you"</string>
    <string name="msg_you_and">"you and "</string>
    <string name="msg_deleted_2">"deleted "</string>
    <string name="msg_added_2">"added "</string>
    <string name="msg_encr_of">" disabled chat encryption"</string>
    <string name="msg_new_message">New message</string>
    <string name="msg_select_them">" select theme "</string>
    <string name="msg_you_set_theme">You set the theme \'</string>
    <string name="msg_you_leave_chat">You left the chat</string>
    <string name="msg_you_removed_from_the_chat">You removed from the chat</string>
    <string name="msg_joined_the_chat">" joined the chat"</string>
    <string name="msg_create_group_dialog">Create group dialog</string>
    <string name="msg_group_name">Group name</string>
    <string name="msg_add_participant">Add participant</string>
    <string name="msg_loading">loading...</string>
    <string name="tst_chat_not_found">Chat not found</string>
    <string name="tst_disabled_access_call">You disabled access to call phone. Make phone calls will be unavailable.</string>
    <string name="tst_call_avalible">Phone number is unavailable</string>
    <string name="tst_acces_location_enabled">Access to location is enabled. Please retry operation</string>
    <string name="tst_you_disabled_acces_location">You disabled access to location. Location info will be unavailable.</string>
    <string name="tst_acces_mic_enabled">Access to microphone is enabled. Please retry operation</string>
    <string name="tst_disabled_mic">You disabled access to microphone. Record sound messages will be unavailable.</string>
    <string name="tst_search">Search</string>
    <string name="tst_coming_soon">Coming soon</string>
    <string name="tst_success">Complete successfully</string>
    <string name="tst_operation_canceled">Operation cancelled</string>
    <string name="tst_no_free_space">No free space on SD-card</string>
    <string name="tst_connecting">Connecting…</string>
    <string name="tst_close">Close</string>
    <string name="tst_pass_incorrect">Password incorrect</string>
    <string name="tst_pass_empty">Empty pas</string>
    <string name="tst_not_member">You are no longer a member of this chat</string>
    <string name="tst_qr_sent">QR sent successfully</string>
    <string name="tst_access_garanted">Access to accounts is not granted!</string>
    <string name="tst_error">Error, please try again later</string>
    <string name="tst_wrong_number">Wrong phone number</string>
    <string name="tst_no_found_app">No application found to open attachment</string>
    <string name="tst_same_user">You already have this user</string>
    <string name="tst_name_cant_be_empty">Name can\'t be empty</string>
    <string name="tst_phone_copied">Phone copied</string>
    <string name="tst_exceeded_allowed_number">You have exceeded the allowed number of attempts</string>
    <string name="tst_many">Many request</string>
    <string name="tst_you_have_canceled_auth">You have canceled authorization</string>
    <string name="tst_exceed_otp_pass">You have exceeded the number of attempts to enter the OTP password</string>
    <string name="tst_otp_pass_has_expired">OTP password has expired</string>
    <string name="tst_you_entered_incorrect_sms">You entered incorrect SMS code</string>
    <string name="tst_register_on_the_mobile_version">Please register on the mobile version first https://sender.mobi/</string>
    <string name="tst_permission_not_granted">Permission not granted</string>
    <string name="tst_link_copied">Link copied</string>
    <string name="tst_permission_sms_off">You do not include permission sms</string>
    <string name="tst_select_google_account">Select a Google account</string>
    <string name="tst_error_save_photo">Failed to save the photo. Repeat please</string>
    <string name="otp_we_sent_sms_code_on_your_device">We sent SMS code on your device</string>
    <string name="otp_phone_number">Phone number</string>
    <string name="otp_sms_code">SMS code</string>
</resources>