<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="mobi.sender.ui.RegOtpActivity">

    <ProgressBar
        android:id="@+id/reg_progress"
        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:indeterminate="true"
        android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/otp_we_sent_sms_code_on_your_device"
                android:textSize="@dimen/txt_size_title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/otp_phone_number"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/reg_otp_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryText"
                android:textSize="28sp"
                tools:text="+380" />

            <EditText
                android:id="@+id/reg_otp_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:ems="10"
                android:hint="@string/otp_sms_code"
                android:inputType="number"
                android:maxLength="4" />

            <Button
                android:id="@+id/btn_i_dont_recive"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:onClick="notReceiveSMS"
                android:text="@string/btn_i_didn_t_receive_sms"
                android:visibility="gone" />
        </LinearLayout>
</RelativeLayout>
