<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/appbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="mobi.sender.ui.SettingsActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/photo"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    tools:background="@drawable/ic_acc_bg" />

                <TextView
                    android:id="@+id/user_name"
                    style="@style/TvRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/photo"
                    android:layout_toRightOf="@+id/photo"
                    android:ellipsize="end"
                    android:gravity="end"
                    android:hint="@string/stg_name"
                    android:maxLength="25"
                    android:maxLines="2" />

                <TextView
                    android:id="@+id/status"
                    style="@style/TvRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_name"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_toEndOf="@+id/photo"
                    android:layout_toRightOf="@+id/photo"
                    android:ellipsize="end"
                    android:gravity="end"
                    android:hint="@string/stg_status"
                    android:maxLength="80"
                    android:maxLines="2" />
            </RelativeLayout>

            <include layout="@layout/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/TvCaption"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/stg_general" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TvRegular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_toLeftOf="@+id/sv_gps"
                        android:layout_toStartOf="@+id/sv_gps"
                        android:text="@string/stg_disable_gps" />

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/sv_gps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:fitsSystemWindows="true" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TvRegular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_toLeftOf="@+id/send_status_read"
                        android:layout_toStartOf="@+id/send_status_read"
                        android:text="@string/stg_send_status_read" />

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/send_status_read"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:fitsSystemWindows="true" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/ll_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TvRegular"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/stg_language" />

                    <Spinner
                        android:id="@+id/lang"
                        style="@style/TvRegular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/bitcoin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TvRegular"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Bitcoin" />

                </LinearLayout>
            </LinearLayout>

            <include layout="@layout/line" />

            <TextView
                style="@style/TvCaption"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/stg_notifications" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/TvRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:text="@string/stg_sound" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/sound"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/TvRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:text="@string/stg_notifications" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/notifications"
                    style="@style/TvRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin" />
            </LinearLayout>

            <include layout="@layout/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="32dp"
                android:orientation="vertical">

                <TextView
                    style="@style/TvCaption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stg_cleanup" />

                <TextView
                    android:id="@+id/disable_this_device"
                    style="@style/TvRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/stg_disable_this_device" />

                <TextView
                    android:id="@+id/disable_other_devices"
                    style="@style/TvRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/stg_disable_other_devices" />

                <TextView
                    android:id="@+id/clear_files"
                    style="@style/TvRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/stg_clear_media_files" />

                <TextView
                    android:id="@+id/clear_history"
                    style="@style/TvRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/stg_clear_history" />

                <TextView
                    android:id="@+id/reset"
                    style="@style/TvRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/stg_reset_settings" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>